# Ant-Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Globals.hpp
include/core/: Direction.hpp  Grid.hpp  Position.hpp
include/entities/: Ant.hpp  Anthill.hpp  AnthillTile.hpp  Beetle.hpp  CigaretteButt.hpp  Enemy.hpp  Entity.hpp  Food.hpp  Pheromone.hpp  WarriorAnt.hpp  WorkerAnt.hpp
include/utils/: Random.hpp
include/world/: World.hpp
src/: main.cpp
src/core/: Grid.cpp
src/entities/: Anthill.cpp  Beetle.cpp  CigaretteButt.cpp  Enemy.cpp  Entity.cpp  Food.cpp  Pheromone.cpp  WarriorAnt.cpp  WorkerAnt.cpp
src/utils/: Random.cpp
src/world/: World.cpp
